# capital-lens

./: Makefile  README.md
.github/workflows/: azure-static-web-apps-blue-meadow-03a09ce00.yml  azure-static-web-apps-cd.yml
.kiro/steering/: product.md  structure.md  tech.md
client/: package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.tsx
client/src/components/: ai-consulting.tsx  ipo-table.tsx  market-overview.tsx
client/src/components/ai/: earnings-row.tsx  earnings-section.tsx  error-row.tsx  loading-row.tsx  note.tsx  per-section.tsx  report-section.tsx  stocks-section.tsx
client/src/types/: ai_consulting.ts  common.ts  ipo.ts  market.ts
server/: .dockerignore  Dockerfile  deploy.sh  pyproject.toml
server/config/: ai_consulting_tickers.json
server/docs/: implementation_plan.md
server/src/: main.py
server/src/core/: config.py  exceptions.py
server/src/datasource/: data_j_service_ai_consulting_candidates.xlsx  data_j_service_companies.xlsx  filter_service_companies.py  screen_ai_consulting_service_companies.py  stocks.json
server/src/datasource/yfinance_cache/: cache.db
server/src/infrastructure/: jquants_client.py
server/src/infrastructure/jquants/: __init__.py  client.py  fetcher.py
server/src/routers/: ai_consulting.py  ipo.py  market.py
server/src/schemas/: ai_consulting.py  ipo.py  market.py
server/src/scripts/: show_stock_valuation.py
server/src/services/: ai_consulting.py  ipo.py  market.py  stocks.py
server/src/utils/: jpx_parser.py  jquants.py  llm.py  market_data.py  pdf.py  stock_data.py  yfinance.py
(+13 files in other folders)
